API Endpoint included

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <title>{% block title %}Hacker News{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <script src="https://kit.fontawesome.com/b368f63178.js" crossorigin="anonymous"></script>
     {% block head %}{% endblock %}
 </head>
