--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -1,11 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    Latest News
-{% endblock %}
-
-{% block nav %}
-{% endblock %}
+{% block title %}Hacker News{% endblock %}
 
 {% block content %}
 <div class="container">
