--- a/templates/news/news-details.html
+++ b/templates/news/news-details.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}{{ item.get_item_type_display }} - {{ item.title }}{% endblock %}
+{% block title %}{{ item.get_category_display }} - {{ item.title }}{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/news-details.css' %}">
 {% endblock %}
@@ -22,7 +22,7 @@
             </div>
             <div class="card-info">
                 <div class="title">
-                    <p>{{ item.get_item_type_display }}</p>
+                    <p>{{ item.get_category_display }}</p>
                     <h2>{{ item.title }}</h2>
                     <span>{{ item.created_date|date:"F j, Y" }}</span>
                 </div>
@@ -39,8 +39,9 @@
         </div>
         <div class="comments">
             <h3 style="text-align: center; color: #007bff;">Comments</h3>
+            {% if item.subitems.all %}
             {% for comment in item.subitems.all|slice:":5"|dictsortreversed:"created_date" %}
-            <div class="comment-card" id="{{comment.item_id}}">
+            <div class="comment-card" id="{{comment.pk}}">
                 <div class="title">
                     <h5><i class="fa-solid fa-comment"></i> {{ comment.author.username }}</h5>
                     <span style="color: black;">{{ comment.created_date|date:"F j, Y h:i A" }}</span>
@@ -55,8 +56,41 @@
                 {% endif %}
             </div>
             {% endfor %}
+            {% else %}
+            <div style="text-align: center; margin-top: 2rem;">No Comments</div>
+            {% endif %}
+            {% if item.subitems|length > 5 %}
             <button id="show-more" class="show-more">Show More</button>
+            {% endif %}
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block inline-scripts %}
+<script>
+    const showMoreBtns = document.querySelectorAll('.show-more');
+
+    showMoreBtns.forEach(button => {
+        button.onclick = function(event) {
+            const parentNode = event.target.parentNode
+            pk = parentNode.id
+            fetch('/subitems/' + pk)
+            .then(
+                resp => resp.json()
+            )
+            .then(
+                data => {
+                    const div = document.createElement('div')
+                    div.textContent = "New Comment"
+                    console.log(data)
+                    parentNode.appendChild(div)
+                }
+            )
+            .catch(
+                err => console.log(`Error: ${err}`)
+            )
+        };
+    });
+</script>
 {% endblock %}
