--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -15,8 +15,8 @@
                     <option selected value="all">All</option>
                     <option value="job">Job</option>
                     <option value="story">Story</option>
-                    <option value="askhn">Ask HN</option>
-                    <option value="showhn">Show HN</option>
+                    <option value="ask">Ask</option>
+                    <option value="show">Show</option>
                 </select>
             </div>
             <div class="form-group">
